--- a/Resources/Languages/ru.yaml
+++ b/Resources/Languages/ru.yaml
@@ -6,7 +6,7 @@
 '#settings': настройки
 '#change_path_btn': выбрать путь до папки dota 2 beta
 '#select_lang': выбрать язык
-'#change_lang_notif': чтобы изменение вступило в силу, необходимо перезагрузить приложение.
+'#change_lang_notif': чтобы изменение вступило в силу, необходимо перезагрузить приложение. 
 '#tabs': вкладки
 '#add_mods_tab': добавить модификации
 '#standart_itm_name': название стандартного предмета
@@ -14,6 +14,7 @@
 '#style': стиль
 '#mod_name': название модификации
 '#add_mods_btn': добавить модификацию
-'#mods_config_tab': конфигурация модификаций
-'#change_mod_config_btn': изменить конфигурацию модов
+'#mods_config_tab': изменение конфигурации модификаций
+'#change_mod_config_btn': применить
+'#delete_style_btn': удалить стиль
 '#save_tabs_config': сохранить конфигурацию вкладок
